# Module-Architecture--Micro-Framework

./: .gitignore  ArduinoCLI.py  COMVISION.py  DigitalOut.py  README.md  file_system_loader.py  log.txt  pyproject.toml  setup.py
ArduinoRendered/DigitalIn_btn/: DigitalIn_btn.ino
ArduinoRendered/DigitalOut_cascade/: DigitalOut_cascade.ino
ArduinoTemplate/DigitalOut/: PINOUT.ino
ArduinoTemplate/DigitalOut/loop_tamplate/: PINOUT_cascade_loop.ino
ArduinoTemplate/DigitalOut/pinin/: buttonState_iterables.ino
ArduinoTemplate/DigitalOut/pinout/: cascade_pattern.ino  chain_all.ino  chain_pattern.ino  led_pin_false.ino
MAGS/: Compiler.py  DigitalIn.py  PinIn.py
MAGS/ArduinoRendered/DigitalIn_btn/: DigitalIn_btn.ino
MAGS/ArduinoRendered/DigitalIn_btn_cascade/: DigitalIn_btn_cascade.ino
MAGS/ArduinoRendered/DigitalIn_switch_btn/: DigitalIn_switch_btn.ino
MAGS/ArduinoRendered/DigitalIn_switch_cascade/: DigitalIn_switch_cascade.ino
MAGS/ArduinoRendered/DigitalOut_cascade/: DigitalOut_cascade.ino
MAGS/ArduinoRendered/DigitalOut_chain/: DigitalOut_chain.ino
MAGS/ArduinoRendered/MotorsOut/: MotorsOut.ino
MAGS/ArduinoRendered/MotorsOut_push_sweep/: MotorsOut_push_sweep.ino
MAGS/ArduinoRendered/MotorsOut_sweep/: MotorsOut.ino
MAGS/ArduinoTemplate/DigitalOut/: PININ_btn.ino  PININ_btn_cascade.ino  PININ_switch_btn.ino  PININ_switch_cascade.ino  PINOUTT_cacade.ino
MAGS/ArduinoTemplate/MotorsOut/: SERVOOUT.ino  SERVOOUT_button.ino  SERVOOUT_sweep.ino
MAGS/src/: ArduinoCLI.py  Compiler.py  DigitalIn.py  DigitalOut.py  MotorOut.py
test/: compiler_Test.py
(+19 files in other folders)
