[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "module_architecture_arduino"
version = "0.0.0-alpha"
description = "A Python Based Micro-Framework of convient infacing with Arduino Boards"
authors = [
  {name = "Joshua Jonelle G. Espocia", email = "joshuajonellegarbin.espocia@gmail.com"}
]
license = {file = "LICENSE"}
